fix Grid gap=0 bug, add device prop to Locale, use Grid component in LocaleModal (v0.0.53)

--- a/packages/react/src/components/sections/Header/Locale/LocaleModal.module.scss
+++ b/packages/react/src/components/sections/Header/Locale/LocaleModal.module.scss
@@ -1,5 +1,3 @@
-@use 'styles/mixins/mq' as *;
-
 // Modal mode
 
 .modalTrigger {
@@ -24,16 +22,6 @@
     .light & {
       color: var(--color-primary-2);
     }
-  }
-}
-
-.modalGrid {
-  display: grid;
-  gap: 0.75rem;
-  grid-template-columns: repeat(2, 1fr);
-
-  @include mq-md {
-    grid-template-columns: repeat(3, 1fr);
   }
 }
 
